releases/v2021.04.20-beta.2/README.md
# Voyager v2021.04.20-beta.2 (2021-04-25)


## [voyagermesh/docs](https://github.com/voyagermesh/docs)

### [v2021.04.20-beta.2](https://github.com/voyagermesh/docs/releases/tag/v2021.04.20-beta.2)

- [7fe5644](https://github.com/voyagermesh/docs/commit/7fe5644) Prepare for release v2021.04.20-beta.2 (#10)
- [da68a6f](https://github.com/voyagermesh/docs/commit/da68a6f) Document how to issue license (#9)
- [b8bafb4](https://github.com/voyagermesh/docs/commit/b8bafb4) Enable preview mode (#8)
- [be8cca7](https://github.com/voyagermesh/docs/commit/be8cca7) kubectl run is deprecated and is being removed (#7)
- [f10ce89](https://github.com/voyagermesh/docs/commit/f10ce89) Update repository config (#5)
- [2be974f](https://github.com/voyagermesh/docs/commit/2be974f) Update links (#4)
- [7d08a26](https://github.com/voyagermesh/docs/commit/7d08a26) Update ci.yml
- [d7b35a2](https://github.com/voyagermesh/docs/commit/d7b35a2) Add script to open pr
- [689b461](https://github.com/voyagermesh/docs/commit/689b461) Update update-release-tracker.sh
- [fa1e718](https://github.com/voyagermesh/docs/commit/fa1e718) Update update-release-tracker.sh
- [35e3737](https://github.com/voyagermesh/docs/commit/35e3737) Add script to update release tracker on pr merge (#3)
- [cda01d8](https://github.com/voyagermesh/docs/commit/cda01d8) Create .kodiak.toml



## [voyagermesh/installer](https://github.com/voyagermesh/installer)

### [v2021.04.20-beta.2](https://github.com/voyagermesh/installer/releases/tag/v2021.04.20-beta.2)

- [37b8597](https://github.com/voyagermesh/installer/commit/37b8597) Prepare for release v2021.04.20-beta.2 (#71)
- [3a33e2e](https://github.com/voyagermesh/installer/commit/3a33e2e) Update Makefile
- [9c19ed2](https://github.com/voyagermesh/installer/commit/9c19ed2) Add voyager-crds chart (#66)
- [252f14a](https://github.com/voyagermesh/installer/commit/252f14a) Add cleaner skip option for YAML installation process (#65)
- [d737d14](https://github.com/voyagermesh/installer/commit/d737d14) Remove protobuf code generator (#64)
- [6fdc1ca](https://github.com/voyagermesh/installer/commit/6fdc1ca) Update repository config (#63)
- [81c5627](https://github.com/voyagermesh/installer/commit/81c5627) Update Kubernetes v1.18.9 dependencies (#62)
- [acf9453](https://github.com/voyagermesh/installer/commit/acf9453) Update repository config (#61)
- [9de2b98](https://github.com/voyagermesh/installer/commit/9de2b98) Update Kubernetes v1.18.9 dependencies (#60)
- [d2f88f6](https://github.com/voyagermesh/installer/commit/d2f88f6) Update repository config (#59)
- [2f97c0d](https://github.com/voyagermesh/installer/commit/2f97c0d) Update repository config (#58)
- [a17dcd6](https://github.com/voyagermesh/installer/commit/a17dcd6) Update Kubernetes v1.18.9 dependencies (#57)
- [1b34287](https://github.com/voyagermesh/installer/commit/1b34287) Update Kubernetes v1.18.9 dependencies (#56)
- [ce2fa80](https://github.com/voyagermesh/installer/commit/ce2fa80) Update Kubernetes v1.18.9 dependencies (#55)
- [3b9833f](https://github.com/voyagermesh/installer/commit/3b9833f) Update Kubernetes v1.18.9 dependencies (#54)
- [05c1ae4](https://github.com/voyagermesh/installer/commit/05c1ae4) Update repository config (#53)
- [9d5c567](https://github.com/voyagermesh/installer/commit/9d5c567) Update repository config (#52)
- [68974d1](https://github.com/voyagermesh/installer/commit/68974d1) Update Kubernetes v1.18.9 dependencies (#51)
- [1834e92](https://github.com/voyagermesh/installer/commit/1834e92) Update repository config (#50)
- [88837e9](https://github.com/voyagermesh/installer/commit/88837e9) Update Kubernetes v1.18.9 dependencies (#49)
- [fd8dd22](https://github.com/voyagermesh/installer/commit/fd8dd22) Update Kubernetes v1.18.9 dependencies (#48)
- [e5acaa0](https://github.com/voyagermesh/installer/commit/e5acaa0) Update Kubernetes v1.18.9 dependencies (#47)
- [b8f929a](https://github.com/voyagermesh/installer/commit/b8f929a) Update Kubernetes v1.18.9 dependencies (#46)
- [0d18bec](https://github.com/voyagermesh/installer/commit/0d18bec) Update Kubernetes v1.18.9 dependencies (#44)
- [eba9d11](https://github.com/voyagermesh/installer/commit/eba9d11) Update Kubernetes v1.18.9 dependencies (#43)
- [3e27095](https://github.com/voyagermesh/installer/commit/3e27095) Update repository config (#42)
- [877c601](https://github.com/voyagermesh/installer/commit/877c601) Update Kubernetes v1.18.9 dependencies (#41)
- [5cd3131](https://github.com/voyagermesh/installer/commit/5cd3131) Update repository config (#40)
- [14e8b27](https://github.com/voyagermesh/installer/commit/14e8b27) Update Kubernetes v1.18.9 dependencies (#39)
- [f219188](https://github.com/voyagermesh/installer/commit/f219188) Update Kubernetes v1.18.9 dependencies (#38)
- [58f432a](https://github.com/voyagermesh/installer/commit/58f432a) Update repository config (#37)
- [41dc0fd](https://github.com/voyagermesh/installer/commit/41dc0fd) Update repository config (#36)
- [a54c114](https://github.com/voyagermesh/installer/commit/a54c114) Update Kubernetes v1.18.9 dependencies (#35)
- [d95070d](https://github.com/voyagermesh/installer/commit/d95070d) Update Kubernetes v1.18.3 dependencies (#34)
- [c5ca00c](https://github.com/voyagermesh/installer/commit/c5ca00c) Update Kubernetes v1.18.3 dependencies (#33)
- [30dfe30](https://github.com/voyagermesh/installer/commit/30dfe30) Update Kubernetes v1.18.3 dependencies (#32)
- [e89a026](https://github.com/voyagermesh/installer/commit/e89a026) Update Kubernetes v1.18.3 dependencies (#31)
- [b91a6e9](https://github.com/voyagermesh/installer/commit/b91a6e9) Update Kubernetes v1.18.3 dependencies (#30)
- [236a3b1](https://github.com/voyagermesh/installer/commit/236a3b1) Update Kubernetes v1.18.3 dependencies (#29)
- [a2d4bff](https://github.com/voyagermesh/installer/commit/a2d4bff) Update Kubernetes v1.18.3 dependencies (#28)
- [bc8cac9](https://github.com/voyagermesh/installer/commit/bc8cac9) Update Kubernetes v1.18.3 dependencies (#27)
- [8c93371](https://github.com/voyagermesh/installer/commit/8c93371) Update Kubernetes v1.18.3 dependencies (#26)
- [51a239d](https://github.com/voyagermesh/installer/commit/51a239d) Update Kubernetes v1.18.3 dependencies (#25)
- [475bd11](https://github.com/voyagermesh/installer/commit/475bd11) Update Kubernetes v1.18.3 dependencies (#24)
- [4c472a4](https://github.com/voyagermesh/installer/commit/4c472a4) Update Kubernetes v1.18.3 dependencies (#23)
- [40c34b1](https://github.com/voyagermesh/installer/commit/40c34b1) Update to Kubernetes v1.18.3 (#22)
- [2b52571](https://github.com/voyagermesh/installer/commit/2b52571) Update to Kubernetes v1.18.3 (#21)
- [2d5ff81](https://github.com/voyagermesh/installer/commit/2d5ff81) Update to Kubernetes v1.18.3 (#20)
- [1c8cd5e](https://github.com/voyagermesh/installer/commit/1c8cd5e) Make chart registry configurable (#19)
- [c75e2fd](https://github.com/voyagermesh/installer/commit/c75e2fd) Publish to testing dir for alpha/beta releases
- [0fbed72](https://github.com/voyagermesh/installer/commit/0fbed72) Update to Kubernetes v1.18.3 (#18)
- [04abb9d](https://github.com/voyagermesh/installer/commit/04abb9d) Update ci.yml
- [52f62df](https://github.com/voyagermesh/installer/commit/52f62df) Tag chart and app version as string for yq
- [3aed33c](https://github.com/voyagermesh/installer/commit/3aed33c) Update update-release-tracker.sh
- [fe16afc](https://github.com/voyagermesh/installer/commit/fe16afc) Update update-release-tracker.sh
- [9740a56](https://github.com/voyagermesh/installer/commit/9740a56) Update release.yml
- [290be5b](https://github.com/voyagermesh/installer/commit/290be5b) Add script to update release tracker on pr merge (#17)
- [0256621](https://github.com/voyagermesh/installer/commit/0256621) Update kubernetes versions in CI workflow
- [5b4e797](https://github.com/voyagermesh/installer/commit/5b4e797) Add commands to update chart (#16)
- [59872d2](https://github.com/voyagermesh/installer/commit/59872d2) Fix chart release process (#15)
- [cf8f550](https://github.com/voyagermesh/installer/commit/cf8f550) Fix release workflow script
- [70ff5a6](https://github.com/voyagermesh/installer/commit/70ff5a6) Update .kodiak.toml
- [4c429a3](https://github.com/voyagermesh/installer/commit/4c429a3) Update to Kubernetes v1.18.3 (#10)
- [25d6aac](https://github.com/voyagermesh/installer/commit/25d6aac) Update to Kubernetes v1.18.3
- [aeebca4](https://github.com/voyagermesh/installer/commit/aeebca4) Create .kodiak.toml



## [voyagermesh/voyager](https://github.com/voyagermesh/voyager)

### [v13.0.0-beta.2](https://github.com/voyagermesh/voyager/releases/tag/v13.0.0-beta.2)

- [31e87b8e](https://github.com/voyagermesh/voyager/commit/31e87b8e) Disable building arm64 images
- [404a6bcd](https://github.com/voyagermesh/voyager/commit/404a6bcd) Update Dockerfile
- [4ae3aa3f](https://github.com/voyagermesh/voyager/commit/4ae3aa3f) Fix build
- [ae95cdb8](https://github.com/voyagermesh/voyager/commit/ae95cdb8) Build voyager binary before building haproxy image
- [8531ae0e](https://github.com/voyagermesh/voyager/commit/8531ae0e) Fix socklog download url
- [c2f9a803](https://github.com/voyagermesh/voyager/commit/c2f9a803) Publish images to GH registry
- [c2b1a5ce](https://github.com/voyagermesh/voyager/commit/c2b1a5ce) Add license verifier (#1583)
- [94562494](https://github.com/voyagermesh/voyager/commit/94562494) Update repository config (#1584)
- [ea232e45](https://github.com/voyagermesh/voyager/commit/ea232e45) Update license header (#1582)
- [0bdded99](https://github.com/voyagermesh/voyager/commit/0bdded99) Avoid issuing cert two times at creation (#1535)
- [b356066d](https://github.com/voyagermesh/voyager/commit/b356066d) fix CheckCertificates goroutine to run an infinite loop again (#1531)
- [7bd08749](https://github.com/voyagermesh/voyager/commit/7bd08749) Avoid concurrent haproxy starts or reloads (#1547)
- [5b423374](https://github.com/voyagermesh/voyager/commit/5b423374) Update kind in CI
- [6e9cced0](https://github.com/voyagermesh/voyager/commit/6e9cced0) Update README.md
- [c7f806e6](https://github.com/voyagermesh/voyager/commit/c7f806e6) Update repository config (#1579)
- [e13dc9e7](https://github.com/voyagermesh/voyager/commit/e13dc9e7) Update repository config (#1577)
- [a4705e66](https://github.com/voyagermesh/voyager/commit/a4705e66) Update Kubernetes v1.18.9 dependencies (#1576)
- [e937812b](https://github.com/voyagermesh/voyager/commit/e937812b) Update repository config (#1574)
- [8a9f92cc](https://github.com/voyagermesh/voyager/commit/8a9f92cc) Update repository config (#1573)
- [08872d74](https://github.com/voyagermesh/voyager/commit/08872d74) Update Kubernetes v1.18.9 dependencies (#1572)
- [01ad6049](https://github.com/voyagermesh/voyager/commit/01ad6049) Update Kubernetes v1.18.9 dependencies (#1571)
- [89e39d57](https://github.com/voyagermesh/voyager/commit/89e39d57) Update repository config (#1570)
- [777e2c53](https://github.com/voyagermesh/voyager/commit/777e2c53) Update repository config (#1569)
- [6fcc2041](https://github.com/voyagermesh/voyager/commit/6fcc2041) Update Kubernetes v1.18.9 dependencies (#1568)
- [120682e7](https://github.com/voyagermesh/voyager/commit/120682e7) Update Kubernetes v1.18.9 dependencies (#1567)
- [23193a8e](https://github.com/voyagermesh/voyager/commit/23193a8e) Update Kubernetes v1.18.9 dependencies (#1566)
- [23553514](https://github.com/voyagermesh/voyager/commit/23553514) Update Kubernetes v1.18.9 dependencies (#1565)
- [924fced5](https://github.com/voyagermesh/voyager/commit/924fced5) Update Kubernetes v1.18.9 dependencies (#1564)
- [8e0dc012](https://github.com/voyagermesh/voyager/commit/8e0dc012) Update Kubernetes v1.18.9 dependencies (#1563)
- [e54d2622](https://github.com/voyagermesh/voyager/commit/e54d2622) Update repository config (#1561)
- [ba9e4aa7](https://github.com/voyagermesh/voyager/commit/ba9e4aa7) Update Kubernetes v1.18.9 dependencies (#1559)
- [285dac84](https://github.com/voyagermesh/voyager/commit/285dac84) Update Kubernetes v1.18.9 dependencies (#1558)
- [f5e66408](https://github.com/voyagermesh/voyager/commit/f5e66408) Update Kubernetes v1.18.9 dependencies (#1557)
- [a51e4aa4](https://github.com/voyagermesh/voyager/commit/a51e4aa4) Update Kubernetes v1.18.9 dependencies (#1555)
- [1afdf274](https://github.com/voyagermesh/voyager/commit/1afdf274) Update Kubernetes v1.18.9 dependencies (#1554)
- [93e691ea](https://github.com/voyagermesh/voyager/commit/93e691ea) Update Kubernetes v1.18.9 dependencies (#1552)
- [3d1c72d4](https://github.com/voyagermesh/voyager/commit/3d1c72d4) Update Kubernetes v1.18.9 dependencies (#1549)
- [d48b88ed](https://github.com/voyagermesh/voyager/commit/d48b88ed) Update repository config (#1551)
- [603868db](https://github.com/voyagermesh/voyager/commit/603868db) Update repository config (#1550)
- [869936e4](https://github.com/voyagermesh/voyager/commit/869936e4) Update repository config (#1548)
- [ac8399a7](https://github.com/voyagermesh/voyager/commit/ac8399a7) Update Kubernetes v1.18.9 dependencies (#1546)
- [3889306c](https://github.com/voyagermesh/voyager/commit/3889306c) Update Kubernetes v1.18.9 dependencies (#1544)
- [2256661e](https://github.com/voyagermesh/voyager/commit/2256661e) Update repository config (#1543)
- [ed48d8f0](https://github.com/voyagermesh/voyager/commit/ed48d8f0) Update repository config (#1542)
- [c1d898d3](https://github.com/voyagermesh/voyager/commit/c1d898d3) Update Kubernetes v1.18.9 dependencies (#1541)
- [7764aac4](https://github.com/voyagermesh/voyager/commit/7764aac4) Update Kubernetes v1.18.3 dependencies (#1540)
- [f9f1732e](https://github.com/voyagermesh/voyager/commit/f9f1732e) Update Kubernetes v1.18.3 dependencies (#1539)
- [b3f18ffd](https://github.com/voyagermesh/voyager/commit/b3f18ffd) Update Kubernetes v1.18.3 dependencies (#1536)
- [c92a0f15](https://github.com/voyagermesh/voyager/commit/c92a0f15) Update Kubernetes v1.18.3 dependencies (#1534)
- [aa701496](https://github.com/voyagermesh/voyager/commit/aa701496) Update Kubernetes v1.18.3 dependencies (#1532)
- [cacef44c](https://github.com/voyagermesh/voyager/commit/cacef44c) Update Kubernetes v1.18.3 dependencies (#1529)
- [f9248332](https://github.com/voyagermesh/voyager/commit/f9248332) Update Kubernetes v1.18.3 dependencies (#1528)
- [fd3aa94c](https://github.com/voyagermesh/voyager/commit/fd3aa94c) Update Kubernetes v1.18.3 dependencies (#1527)
- [85915ab8](https://github.com/voyagermesh/voyager/commit/85915ab8) Update Kubernetes v1.18.3 dependencies (#1524)
- [dd3cc508](https://github.com/voyagermesh/voyager/commit/dd3cc508) Update to Kubernetes v1.18.3 (#1521)
- [cbd7d3e2](https://github.com/voyagermesh/voyager/commit/cbd7d3e2) Update to Kubernetes v1.18.3 (#1520)
- [d00a4c72](https://github.com/voyagermesh/voyager/commit/d00a4c72) Update to Kubernetes v1.18.3 (#1519)
- [c6bbe8cc](https://github.com/voyagermesh/voyager/commit/c6bbe8cc) Update to Kubernetes v1.18.3 (#1518)
- [dcc94c7e](https://github.com/voyagermesh/voyager/commit/dcc94c7e) Update ci.yml
- [d9c38862](https://github.com/voyagermesh/voyager/commit/d9c38862) Update update-release-tracker.sh
- [5c74ad2b](https://github.com/voyagermesh/voyager/commit/5c74ad2b) Update update-release-tracker.sh
- [21b03bbb](https://github.com/voyagermesh/voyager/commit/21b03bbb) Add script to update release tracker on pr merge (#1516)
- [57503de5](https://github.com/voyagermesh/voyager/commit/57503de5) Update .kodiak.toml
- [dbdb1e5c](https://github.com/voyagermesh/voyager/commit/dbdb1e5c) Update to Kubernetes v1.18.3 (#1514)
- [1abc059e](https://github.com/voyagermesh/voyager/commit/1abc059e) Update to Kubernetes v1.18.3
- [7a61045e](https://github.com/voyagermesh/voyager/commit/7a61045e) Create .kodiak.toml



